--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.5"
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.0-alpha.11"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.1.2",
