--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.0.5",
-    "vue-router": "^4.0.0-alpha.11",
-    "vueperslides": "^3.3.2"
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3",
+    "vueperslides": "^3.6.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.1.2",
-    "@vue/compiler-sfc": "^3.0.5",
-    "autoprefixer": "^10.2.4",
-    "postcss": "^8.2.4",
-    "tailwindcss": "^2.0.2",
-    "vite": "^2.9.13"
+    "@tailwindcss/postcss": "^4.1.16",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/compiler-sfc": "^3.5.22",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16",
+    "vite": "^7.1.12"
   }
 }
